resumed linked to portfolio

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
-                        <img src="img/bryan-headshot.jpg" alt="Bryan Auter">
+                        <img src="img/bryan-headshot.jpg" alt="Bryan Auter" class="rounded-circle">
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                 <div class="cta-wrap text-center">
                     <div class="cta-content">
                         <h2>Hardworking.<br> Team Player.<br> Desire to grow.</h2>
-                        <a href="#" class="default-btn">RESUME</a>
+                        <a href="Bryan-Auter-Resume.pdf" class="default-btn" download="Bryan-Auter-Resume.pdf">RESUME</a>
                     </div>
                 </div>
             </div>
@@ -276,8 +276,8 @@
             <div class="container-fluid">
                 <div class="row contact-wrap">
                     <div class="col-lg-6 col-md-8 offset-md-2 offset-lg-0 pdl-80">
-                        <div class="contact-info mb-30">
-                            <h2>Lets get in touch</h2>
+                        <div class="contact-info mb-30 mt-4">
+                            <h2>Send me an Email</h2>
                         </div>
                         <div class="contact-form">
                             <form action="contact.php" method="post" id="ajax_form" class="form-horizontal">
@@ -296,12 +296,16 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-md-12">
-                                        <button id="submit" class="default-btn submit-button" type="submit">Send Message</button>
+                                        <button id="submit" class="default-btn submit-button mb-4" type="submit">Send Message</button>
                                     </div>
                                 </div>
                                 <div id="form-messages" class="alert" role="alert"></div>
                             </form>
                         </div>
+                    </div>
+                    <div class="col-lg-6 col-md-8 offset-md-2 offset-lg-0 pdl-80">
+                        <h2>Give me a call</h2>
+                        <h4>1-(262)-370-0264</h4>
                     </div>
                 </div>
             </div>
@@ -312,7 +316,7 @@
 		    
 		<footer class="footer-section align-center">
 			<div class="container">
-				<p>&copy; 2019 Alison Powered by TeamXcel</p>
+				<p>&copy; 2019 Bauter Powered by TeamXcel</p>
 			</div>
 		</footer><!-- /.footer_section -->
 
