edited resume link to open in a new window with attr. target _blank

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="cta-wrap text-center">
                     <div class="cta-content">
                         <h2>Hardworking.<br> Team Player.<br> Desire to grow.</h2>
-                        <a href="Bryan-Auter-Resume.pdf" class="default-btn" download="Bryan-Auter-Resume.pdf">RESUME</a>
+                        <a href="Bryan-Auter-Resume.pdf" target="_blank" class="default-btn" download="Bryan-Auter-Resume.pdf">RESUME</a>
                     </div>
                 </div>
             </div>
