Updated about me, linked linkedin and facebook

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h1><span class="rotate">Driven, Passionate, Coding</span></h1>
                     <p>I’m a MERN developer.<br> Let me show you what I can do.</p>
                     <ul class="social-link">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=100009782461629&ref=bookmarks"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://github.com/Bauter"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/bryan-auter-140397192/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
@@ -96,8 +96,13 @@
                             <div class="section-heading mb-20">
                                <h2>About Me</h2>
                             </div>
-                            <p>I am an up and coming MERN Full Stack Developer.</p>
-                            <p> Currently seeking a position in the field where I can work on honing my skills. </p>
+                            <p>Up and coming MERN Full Stack Developer.</p>
+                            <p>For the past 10 years I was an Automotive Technician.</p>
+                            <p>But I longed for change...</p>
+                            <p>I decided to take a leap of faith and do something else with my life.</p>
+                            <p>After a few phone calls I was enrolled in a coding bootcamp at University of Milwaukee Wisconsin.</p>
+                            <p>A driven, focused, passionate, family man. Working hard to brighten my future.</p>
+                            <p>Let me show you what I can do!</p>
                             <a href="#portfolio" class="default-btn">See My Work</a>
                         </div>
                     </div>
