--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <h2>Send me an Email</h2>
                         </div>
                         <div class="contact-form">
-                            <form action="https://bauter.github.io/Updated-portfolio/" method="post" id="ajax_form" class="form-horizontal">
+                            <form action="https://formspree.io/xgekppqr" method="post" id="ajax_form" class="form-horizontal">
                                 <div class="form-group colum-row row">
                                     <div class="col-sm-6">
                                         <input type="text" id="name" name="name" class="form-control" placeholder="Name" required>
