briefly updated skills section, will add on at a later time

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <p>For the past 10 years I was an Automotive Technician.</p>
                             <p>But I longed for change...</p>
                             <p>I decided to take a leap of faith and do something else with my life.</p>
-                            <p>After a few phone calls I was enrolled in a coding bootcamp at University of Milwaukee Wisconsin.</p>
+                            <p>After a few phone calls I was enrolled in a coding bootcamp at University of Wisconsin Milwaukee.</p>
                             <p>A driven, focused, passionate, family man. Working hard to brighten my future.</p>
                             <p>Let me show you what I can do!</p>
                             <a href="#portfolio" class="default-btn">See My Work</a>
@@ -128,42 +128,42 @@
                                 <div class="service-content">
                                     <i class="icon-layers"></i>
                                     <h3>HTML</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Experience using HTML5.</p>
                                 </div>
                             </div><!-- Service-1 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
                                     <i class="icon-tools"></i>
                                     <h3>CSS</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Custom styling with CSS.</p>
                                 </div>
                             </div><!-- Service-2 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
                                     <i class="icon-bargraph"></i>
                                     <h3>Javascript</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Functional apps created with JS.</p>
                                 </div>
                             </div><!-- Service-3 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
                                     <i class="icon-phone"></i>
                                     <h3>Node</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Experience working with Node.js.</p>
                                 </div>
                             </div><!-- Service-4 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
                                     <i class="icon-bike"></i>
                                     <h3>React</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Learning React.</p>
                                 </div>
                             </div><!-- Service-5 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
                                     <i class="icon-genius"></i>
                                     <h3>Mongo</h3>
-                                    <p>Lorem Ipsum is simply more dummy the industry.</p>
+                                    <p>Learning Mongo database.</p>
                                 </div>
                             </div><!-- Service-6 -->
                         </div>
