--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
             </div>
 		</header> <!-- Header -->
 		
-        <section id="contact" class="contact-section bg-dark">
+        <section id="contact" class="contact-section bg-dark mt-5">
             <div class="container-fluid">
                 <div class="row contact-wrap">
                     <div class="col-lg-6 col-md-8 offset-md-2 offset-lg-0 pdl-80">
-                        <div class="contact-info mb-30 mt-4">
+                        <div class="contact-info mb-30 mt-5">
                             <h2>Send me an Email</h2>
                         </div>
                         <div class="contact-form">
