scratch game removed and liri bot link took its place, photo credit added

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/castle.jpg" alt="castle" class="rounded-lg">
+                                        <img src="img/comp-with-cmd.jpg" alt="computer with cmd displayed" class="rounded-lg">
                                         <div class="hover">
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://scratch.mit.edu/projects/344679613" target="_blank">Cat & Rat</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/liri-node-app" target="_blank">Liri Bot</a>
                                             
                                         </div>
                                     </div>
