--- a/credit.html
+++ b/credit.html
@@ -178,6 +178,17 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-4 col-sm-6">
+                            <div class="portfolio-box">
+                                <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                    <img src="img/comp-with-cmd.jpg" alt="computer with cmd open" class="rounded-lg">
+                                    <div class="hover">
+                                        <p style="color: red;">Photo-credit: Photo by Goran Ivos on Unsplash</p>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
                     </div>
                 </div>
             </div>
