--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
                                         <img src="img/comp-with-cmd.jpg" alt="computer with cmd displayed" class="rounded-lg">
                                         <div class="hover">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/liri-node-app" target="_blank">Liri Bot</a>
-                                            
+                                            <br>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/Bamazon" target="_blank">Bamazon</a>
                                         </div>
                                     </div>
                                 </div> 
