updated skills icons to match skills, used font-awesome cdn via script tag

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		<!-- Responsive CSS -->
         <link rel="stylesheet" href="css/responsive.css">
 
+        <script src="https://kit.fontawesome.com/f89da946a8.js" crossorigin="anonymous"></script>
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body data-spy="scroll" data-target="#navmenu" data-offset="70">
@@ -126,42 +128,43 @@
                         <div class="row service-wrap">
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-layers"></i>
+                                    <i class="fab fa-html5"></i>
                                     <h3>HTML</h3>
                                     <p>Experience using HTML5.</p>
                                 </div>
                             </div><!-- Service-1 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-tools"></i>
+                                    <i class="fab fa-css3-alt"></i>
                                     <h3>CSS</h3>
                                     <p>Custom styling with CSS.</p>
                                 </div>
                             </div><!-- Service-2 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-bargraph"></i>
+                                    <i class="fab fa-js-square"></i>
                                     <h3>Javascript</h3>
                                     <p>Functional apps created with JS.</p>
                                 </div>
                             </div><!-- Service-3 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-phone"></i>
+                                    <i class="fab fa-node-js"></i>
                                     <h3>Node</h3>
                                     <p>Experience working with Node.js.</p>
+                                    
                                 </div>
                             </div><!-- Service-4 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-bike"></i>
+                                    <i class="fab fa-react"></i>
                                     <h3>React</h3>
                                     <p>Learning React.</p>
                                 </div>
                             </div><!-- Service-5 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
                                 <div class="service-content">
-                                    <i class="icon-genius"></i>
+                                    <i class="fas fa-server"></i>
                                     <h3>Mongo</h3>
                                     <p>Learning Mongo database.</p>
                                 </div>
