had to change profile icons on main page from 'fa fa-blabla' to 'fab fa-blabla

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <h1><span class="rotate">Driven, Passionate, Coding</span></h1>
                     <p>I’m a MERN developer.<br> Let me show you what I can do.</p>
                     <ul class="social-link">
-                        <li><a href="https://www.facebook.com/profile.php?id=100009782461629&ref=bookmarks"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://github.com/Bauter"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/bryan-auter-140397192/"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=100009782461629&ref=bookmarks"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://github.com/Bauter"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/bryan-auter-140397192/"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
