added friend finder app to profile, changed img and updated credit.html with img and credit

--- a/credit.html
+++ b/credit.html
@@ -127,9 +127,9 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="portfolio-box">
                                 <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                    <img src="img/crystal.jpg" alt="crystal" class="rounded-lg">
+                                    <img src="img/friends.jpg" alt="crystal" class="rounded-lg">
                                     <div class="hover">
-                                        <p style="color: red;">Photo-credit: Photo by Jason D on Unsplash</p>
+                                        <p style="color: red;">Photo by Helena Lopes from Pexels</p>
                                     </div>
                                 </div>
                             </div> 
