--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/crystal.jpg" alt="crystal" class="rounded-lg">
+                                        <img src="img/friends.jpg" alt="crystal" class="rounded-lg">
                                         <div class="hover">
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/unit-4-game/" target="_blank">Crystal Collector</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://f-finder-bauter.herokuapp.com/" target="_blank">Friend-Finder</a>
                                             <br>
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/unit-4-game" target="_blank">Repository</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/friendfinder" target="_blank">Repository</a>
                                         </div>
                                     </div>
                                 </div> 
