changed 'giphy' portfolio img to 'supra.jpg' in index.html and credit.html

--- a/credit.html
+++ b/credit.html
@@ -116,9 +116,9 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="portfolio-box">
                                 <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                    <img src="img/ae86.jpg" alt="AE86 driving at night" class="rounded-lg">
+                                    <img src="img/supra.jpg" alt="AE86 driving at night" class="rounded-lg">
                                     <div class="hover">
-                                        <p style="color: red;">Photo-credit: Photo by Jordi Sumoy on Unsplash </p>
+                                        <p style="color: red;">Photo by Garvin St. Villier from Pexels</p>
                                     </div>
                                 </div>
                             </div>
