--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/ae86.jpg" alt="AE86 driving at night" class="rounded-lg">
+                                        <img src="img/supra.jpg" alt="AE86 driving at night" class="rounded-lg">
                                         <div class="hover center">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/GifTastic/" target="_blank">Giftastic</a>
                                             <br>
@@ -242,7 +242,7 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/friends.jpg" alt="crystal" class="rounded-lg">
+                                        <img src="img/friends.jpg" alt="group of friends" class="rounded-lg">
                                         <div class="hover">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://f-finder-bauter.herokuapp.com/" target="_blank">Friend-Finder</a>
                                             <br>
