fixed 'skills' spacing issue by adding 'br' tag to skill divs with one line of text (to even out divs with 2 lines)

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                                     <i class="fab fa-html5"></i>
                                     <h3>HTML</h3>
                                     <p>Experience using HTML5.</p>
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-1 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
@@ -138,6 +139,7 @@
                                     <i class="fab fa-css3-alt"></i>
                                     <h3>CSS</h3>
                                     <p>Custom styling with CSS.</p>
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-2 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
@@ -160,6 +162,7 @@
                                     <i class="fab fa-react"></i>
                                     <h3>React</h3>
                                     <p>Learning React.</p>
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-5 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
@@ -167,6 +170,7 @@
                                     <i class="fas fa-server"></i>
                                     <h3>Mongo</h3>
                                     <p>Learning Mongo database.</p>
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-6 -->
                         </div>
