added burger app

--- a/credit.html
+++ b/credit.html
@@ -189,6 +189,17 @@
                                 </div>
                             </div> 
                         </div>
+
+                        <div class="col-lg-4 col-sm-6">
+                            <div class="portfolio-box">
+                                <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                    <img src="img/burger.jpg" alt="burger" class="rounded-lg">
+                                    <div class="hover">
+                                        <p style="color: red;">Photo by Valeria Boltneva from Pexels</p>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
                     </div>
                 </div>
             </div>
