--- a/index.html
+++ b/index.html
@@ -268,6 +268,19 @@
                                     </div>
                                 </div> 
                             </div><!-- Portfolio-6 -->
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="portfolio-box">
+                                    <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                        <img src="img/burger.jpg" alt="burger" class="rounded-lg">
+                                        <div class="hover">
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/SequelizedBurger" target="_blank">Burger-app</a>
+                                            <br>
+                                            <a class="default-btn rounded mt-2 mb-2" href=" https://sequelized-burger-app-8686.herokuapp.com/burgers" target="_blank">Repository</a>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div><!-- Portfolio- -->
                         </div>
                     </div>
                 </div>
