added project 2 and fixed skills spacing issue

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                                     <i class="fab fa-js-square"></i>
                                     <h3>Javascript</h3>
                                     <p>Functional apps created with JS.</p>
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-3 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
@@ -154,7 +155,7 @@
                                     <i class="fab fa-node-js"></i>
                                     <h3>Node</h3>
                                     <p>Experience working with Node.js.</p>
-                                    
+                                    <br> <!--added to even out spacing issue-->
                                 </div>
                             </div><!-- Service-4 -->
                             <div class="col-lg-4 col-sm-6 pd-15">
@@ -196,7 +197,7 @@
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
                                         <img src="img/lightning-and-gray-clouds.jpg" alt="lightning and clouds" class="rounded-lg">
                                         <div class="hover">
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/Project-1/" target="_blank">Project-1: WENT</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/Project-1/" target="_blank">P1: WENT</a>
                                             <br>
                                             <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/Project-1" target="_blank">Repository</a>
                                         </div>
@@ -235,9 +236,9 @@
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
                                         <img src="img/supra.jpg" alt="AE86 driving at night" class="rounded-lg">
                                         <div class="hover center">
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/GifTastic/" target="_blank">Giftastic</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://carnostic-project-2.herokuapp.com/home.html" target="_blank">P2: CarNostic</a>
                                             <br>
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/GifTastic" target="_blank">Repository</a>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/pprchang/Project-2" target="_blank">Repository</a>
                                         </div>
                                     </div>
                                 </div>
