updated- fixed issue with 'scroll down' text overlapping github icon link, updated portfolio section by adding two add. projects, added forked p1 went project, added new images to 'credit.html', added backgorund to resume div with h2 text

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Alison portfolio template">
         <meta name="author" content="ThemeEaster">
         <link rel="icon" type="image/png" sizes="16x16" href="img/coding-favicon.png">
-        <title>Bauter Portfolio</title>
+        <title>Bauter Portfolio - Contact</title>
         
 		
 		<!-- Font Awesome CSS -->
