--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <div class="cta-wrap text-center">
                     <div class="cta-content p-4">
                         <h2>Hardworking.<br> Team Player.<br> Desire to grow.</h2>
-                        <a href="Bryan-Auter-Resume.pdf" target="_blank" class="default-btn" download="Bryan-Auter-Resume.pdf">RESUME</a>
+                        <a href="Bryan-Auter-Resume_GDOC.pdf" target="_blank" class="default-btn" download="Bryan-Auter-Resume_GDOC.pdf">RESUME</a>
                     </div>
                 </div>
             </div>
