added web scraper and react app to portfolio

--- a/index.html
+++ b/index.html
@@ -264,6 +264,19 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                        <img src="img/arcticMiniFig.jpg" alt="Arctic lego mini-figure" class="rounded-lg">
+                                        <div class="hover">
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/Clicky-Game/" target="_blank">Clicky-Game</a>
+                                            <br>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/Clicky-Game" target="_blank">Repository</a>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div><!-- Portfolio-6 -->
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="portfolio-box">
+                                    <div class="portfolio-thumb text-center m-2 rounded-lg">
                                         <img src="img/comp-with-cmd.jpg" alt="computer with cmd displayed" class="rounded-lg">
                                         <div class="hover">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/liri-node-app" target="_blank">Liri Bot</a>
@@ -272,7 +285,7 @@
                                         </div>
                                     </div>
                                 </div> 
-                            </div><!-- Portfolio-6 -->
+                            </div><!-- Portfolio-7 -->
 
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
@@ -285,25 +298,25 @@
                                         </div>
                                     </div>
                                 </div> 
-                            </div><!-- Portfolio-7 -->
-
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="portfolio-box">
-                                    <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/psychic_neon_sign.jpg" alt="burger" class="rounded-lg">
-                                        <div class="hover">
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/psychic-game/" target="_blank">Psychic-game</a>
-                                            <br>
-                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/psychic-game" target="_blank">Repository</a>
-                                        </div>
-                                    </div>
-                                </div> 
                             </div><!-- Portfolio-8 -->
 
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/crystal.jpg" alt="burger" class="rounded-lg">
+                                        <img src="img/newsPaper.jpg.jpg" alt="news-paper" class="rounded-lg">
+                                        <div class="hover">
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://web-scraper-86.herokuapp.com/" target="_blank">web-scraper-86</a>
+                                            <br>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/CheerioScrape" target="_blank">Repository</a>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div><!-- Portfolio-9 -->
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="portfolio-box">
+                                    <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                        <img src="img/crystal.jpg" alt="crystal" class="rounded-lg">
                                         <div class="hover">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/unit-4-game/" target="_blank">Crystal Collector</a>
                                             <br>
@@ -311,7 +324,21 @@
                                         </div>
                                     </div>
                                 </div> 
-                            </div><!-- Portfolio-9 -->
+                            </div><!-- Portfolio-10 -->
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="portfolio-box">
+                                    <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                        <img src="img/psychic_neon_sign.jpg" alt="psychic neon sign" class="rounded-lg">
+                                        <div class="hover">
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://bauter.github.io/psychic-game/" target="_blank">Psychic-game</a>
+                                            <br>
+                                            <a class="default-btn rounded mt-2 mb-2" href="https://github.com/Bauter/psychic-game" target="_blank">Repository</a>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div><!-- Portfolio-11 -->
+
                         </div>
                     </div>
                 </div>
