--- a/credit.html
+++ b/credit.html
@@ -215,6 +215,28 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="portfolio-box">
                                 <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                    <img src="img/arcticMiniFig.jpg" alt="Arctic Lego mini-figure" class="rounded-lg">
+                                    <div class="hover">
+                                        <p style="color: red;">Photo by Austris Augusts on Unsplash</p>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+
+                        <div class="col-lg-4 col-sm-6">
+                            <div class="portfolio-box">
+                                <div class="portfolio-thumb text-center m-2 rounded-lg">
+                                    <img src="img/newsPaper.jpg" alt="news-paper" class="rounded-lg">
+                                    <div class="hover">
+                                        <p style="color: red;">Photo by AbsolutVision on Unsplash</p>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+
+                        <div class="col-lg-4 col-sm-6">
+                            <div class="portfolio-box">
+                                <div class="portfolio-thumb text-center m-2 rounded-lg">
                                     <img src="img/coding-favicon-credit.png"  id="faviconEnlarged" alt="favicon enlarged" class="rounded-lg">
                                     <div class="hover">
                                         <p style="color: red;">Photo-credit: Icons made by <a href="https://www.flaticon.com/authors/xnimrodx" title="xnimrodx">xnimrodx</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> </p>
