--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             <div class="col-lg-4 col-sm-6">
                                 <div class="portfolio-box">
                                     <div class="portfolio-thumb text-center m-2 rounded-lg">
-                                        <img src="img/newsPaper.jpg.jpg" alt="news-paper" class="rounded-lg">
+                                        <img src="img/newsPaper.jpg" alt="news-paper" class="rounded-lg">
                                         <div class="hover">
                                             <a class="default-btn rounded mt-2 mb-2" href="https://web-scraper-86.herokuapp.com/" target="_blank">web-scraper-86</a>
                                             <br>
